# MouthPark

./: .gitignore  PRD.md  README.md  pyproject.toml  requirements.txt
mouthpark/: cli.py  mapping.py  quantizer.py  recognizer.py  renderer.py
